# xen

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/xen-sys/: Cargo.toml  build.rs
crates/xen-sys/bindings/: xen-4.20.rs  xen-4.21.rs
crates/xen-sys/src/: lib.rs
src/: error.rs  lib.rs  macros.rs
src/arch/: domain.rs  x86.rs
src/core/: domain_id.rs  memory_access.rs  vcpu_id.rs
src/ctrl/: handle.rs  interface.rs  mod.rs
src/ctrl/altp2m/: mod.rs  view.rs
src/ctrl/domain/: info.rs  mod.rs
src/ctrl/event/: data.rs  flags.rs  mod.rs  reason.rs
src/ctrl/event/arch/x86/: regs.rs
src/ctrl/monitor/: mod.rs  ring.rs
src/devicemodel/: handle.rs  mod.rs
src/evtchn/: port.rs
src/foreignmemory/: mapped.rs  mod.rs
src/store/: mod.rs
xen/: Cargo.toml
xen-sys/: Cargo.toml  build.rs  wrapper.h
xen-sys/.docs-rs/: bindings.rs
xen-sys/src/: lib.rs
xen/src/: consts.rs  error.rs  macros.rs
xen/src/arch/: domain.rs  mod.rs
xen/src/core/: domain_id.rs  memory_access.rs  mod.rs
xen/src/ctrl/altp2m/: mod.rs  view.rs
xen/src/ctrl/domain/: mod.rs
xen/src/ctrl/event/: mod.rs  regs.rs  selector.rs
xen/src/ctrl/event/arch/x86/: mod.rs
xen/src/ctrl/monitor/: mod.rs  ring.rs
xen/src/evtchn/: mod.rs  port.rs
xen/src/foreignmemory/: handle.rs
xen/src/store/: handle.rs
