[workspace]
members = [
    "xen",
    "xen-sys",
]
resolver = "2"

[workspace.package]
authors = ["Petr Benes <w.benny@outlook.com>"]
edition = "2021"
license = "MIT"
publish = true
rust-version = "1.81.0"

homepage = "https://github.com/vmi-rs/xen"
repository = "https://github.com/vmi-rs/xen"

[workspace.dependencies]
bitflags = "2"
libc = "0.2"
thiserror = "1.0"
tracing = "0.1"

[profile.release]
debug = 1
