[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
authors = ["Petr Benes <w.benny@outlook.com>"]
edition = "2021"
license = "MIT"
publish = true
rust-version = "1.81.0"

homepage = "https://github.com/vmi-rs/xen"
repository = "https://github.com/vmi-rs/xen"

[workspace.dependencies]
bitflags = "2"
libc = "0.2"
thiserror = "2.0"
tracing = "0.1"

xen-sys = { path = "./crates/xen-sys", version = "0.2.0", package = "libxen-sys" }

[profile.release]
debug = 1

################################################################################
# Root package
################################################################################

[package]
name = "libxen"
version = "0.2.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Safe bindings for Xen libraries"
keywords = [
    "xen",
    "xenctrl",
    "xencontrol",
]
categories = ["api-bindings"]

[lib]
name = "xen"

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

xen-sys = { workspace = true }

[features]
default = []

bindings-4_20 = ["xen-sys/bindings-4_20"]
