[workspace]
members = [
    "crates/*",
]

[workspace.package]
version = "0.4.0"

authors = ["Petr Benes <w.benny@outlook.com>"]
edition = "2024"
license = "MIT"
publish = true
rust-version = "1.85.0"

homepage = "https://github.com/vmi-rs/xen"
repository = "https://github.com/vmi-rs/xen"

[workspace.dependencies]
bitflags = "2"
libc = "0.2"
thiserror = "2.0"
tracing = "0.1"

xen-sys = { path = "./crates/xen-sys", version = "0.4.0", package = "libxen-sys" }

[profile.release]
debug = 1

################################################################################
# Root package
################################################################################

[package]
name = "libxen"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Safe bindings for Xen libraries"
keywords = [
    "xen",
    "xenctrl",
    "xencontrol",
]
categories = ["api-bindings"]

[lib]
name = "xen"

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

xen-sys = { workspace = true }

[features]
default = []

bindings-4_20 = ["xen-sys/bindings-4_20"]
bindings-4_21 = ["xen-sys/bindings-4_21"]
