[package]
name = "libxen"
version = "0.0.1-rc.2"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Safe bindings for Xen libraries"
keywords = [
    "xen",
    "xenctrl",
    "xencontrol",
]
categories = ["api-bindings"]

[lib]
name = "xen"

[dependencies]
bitflags = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

xen-sys = { path = "../xen-sys", version = "0.0.1-rc.2", package = "libxen-sys" }
