[package]
name = "libxen-sys"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Rust FFI bindings for Xen"
keywords = [
    "xen",
    "xenctrl",
    "xencontrol",
]
categories = ["external-ffi-bindings"]

links = "xencontrol"
build = "build.rs"

[lib]
name = "xen_sys"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.32"

[features]
default = [
    "xencontrol",
    "xendevicemodel",
    "xenevtchn",
    "xenforeignmemory",
    "xenstore",
    "vm_event",

    "bindings-4_20",
]

xencontrol = []
xendevicemodel = []
xenevtchn = []
xenforeignmemory = []
xenstore = []
vm_event = []

bindings-4_20 = []
